- added wall art plate - created common scad files to avoid code duplication - cleaned up UI on mobile

--- a/packages/web/min.css
+++ b/packages/web/min.css
@@ -10,8 +10,8 @@
   font-family: Helvetica, Arial, Sans;
   border: 0;
   min-width: 500px;
-  width: 500px;
-
+  width: 95%;
+  max-width: 1000px;
 }
 
 #header {
@@ -43,11 +43,9 @@ canvas {
 }
 
 #parametersdiv {
-  margin: 5px; /* not inherited */
   border: thin solid rgb(200,200,200);
   border-radius: 0;     
-  padding: 10px;
-  width: 95%;
+  width: 100%;
 
   background: white;
   opacity: 0.8;
@@ -124,4 +122,28 @@ canvas {
 
 .parameterstable {
   margin: 0 auto;
+}
+
+#copyDesignID {
+  background-image: url(imgs/CopyPaste.png);
+  padding: 12px 12px;
+  border: none;
+  cursor: pointer;
+  background-size: 100%; 
+  border-color: lightgrey;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .caption, #parametersdiv input, #parametersdiv textarea, #parametersdiv select {
+    font-size: 16pt  }
+    input.checkbox {
+      height : 24px/*desired height*/;
+      width : 24px/*desired height*/;
+
+  }
+
 }
